# flowzint-ai-hackathon

./: .editorconfig  .env  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERIFICATION.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: chat.py  customers.py  operations.py
backend/app/application/: action_service.py  chat_service.py  demo_service.py  dto.py  incident_service.py  mappers.py  query_service.py  rules.py
backend/app/core/: config.py
backend/app/domain/: entities.py  enums.py  exceptions.py  ports.py
backend/app/infrastructure/ai/: factory.py  fallback.py  local.py  openai_compatible.py
backend/app/infrastructure/db/: mappers.py  models.py  repositories.py  seed.py  session.py  uow.py
backend/app/infrastructure/gateways/: refund.py
backend/eval/: run_evaluation.py  scenarios.json
backend/pulseresolve_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_factory.py  test_ai_fallback.py  test_api.py  test_entities.py  test_incident_service.py  test_openai_compatible_ai.py  test_rules.py
docs/: API.md  DEMO_SCRIPT.md  EVALUATION.md  LLD.md  PROJECT_CHECKLIST.md  SECURITY.md  SUBMISSION.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: approvals-client.tsx  audit-client.tsx  chat-client.tsx  navigation.tsx  (+3 more)
(+6 files in other folders)
