[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseresolve-api"
version = "1.0.0"
description = "Incident-aware customer-care AI platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.51.0",
  "sqlalchemy==2.0.51",
  "aiosqlite==0.22.1",
  "asyncpg==0.31.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.12.0",
  "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.14.14"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]
